detailed comments added
